<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/viewProdImage"
            android:layout_width="92dp"
            android:layout_height="79dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/viewProdImage"
            android:layout_toEndOf="@+id/viewProdImage"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewProdName"
                android:text="@string/lblProductName"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="16dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewProdUnit"
                android:text="@string/lblProdUnit"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="14dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewProdPrice"
                android:text="@string/lblProdPrice"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="14dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewProdDate"
                android:text="@string/lblProdDate"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="14dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewProdQty"
                android:text="@string/lblProdQty"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="14dp"
                />
        </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/btnEdit"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>