<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblProductInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblProductInformation"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/cantarell_bold"
            android:textSize="20dp"
            />
        <TextView
            android:fontFamily="@font/cantarell_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblProductImage"
            app:layout_constraintTop_toBottomOf="@+id/lblProductInformation"
            app:layout_constraintLeft_toLeftOf="@id/imgProduct"
            app:layout_constraintRight_toRightOf="@id/imgProduct"
            app:layout_constraintBottom_toTopOf="@id/imgProduct"
            />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="139dp"
            android:layout_height="147dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:backgroundTint="@color/primary"
            app:layout_constraintLeft_toLeftOf="@+id/lblProductInformation"
            app:layout_constraintRight_toRightOf="@+id/lblProductInformation"
            app:layout_constraintTop_toBottomOf="@+id/lblProductInformation"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutProdName"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProduct">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtProdName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblProductName"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutProdUnit"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="@id/inpLayoutProdName"
            app:layout_constraintRight_toRightOf="@id/inpLayoutProdName"
            app:layout_constraintTop_toBottomOf="@id/inpLayoutProdName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtProdUnit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblProductUnit"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutProdPrice"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="@id/inpLayoutProdUnit"
            app:layout_constraintRight_toRightOf="@id/inpLayoutProdUnit"
            app:layout_constraintTop_toBottomOf="@id/inpLayoutProdUnit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtProdPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblProductPrice"
                android:inputType="numberDecimal"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutExpDate"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="@id/inpLayoutProdPrice"
            app:layout_constraintRight_toRightOf="@id/inpLayoutProdPrice"
            app:layout_constraintTop_toBottomOf="@id/inpLayoutProdPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtExpDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblExpDate"
                android:inputType="textPersonName"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutQuantity"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="@id/inpLayoutExpDate"
            app:layout_constraintRight_toRightOf="@id/inpLayoutExpDate"
            app:layout_constraintTop_toBottomOf="@id/inpLayoutExpDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtProdQty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblQuantiy"
                android:inputType="number"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="120dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/lblBtnAdd"
            app:layout_constraintLeft_toLeftOf="@id/inpLayoutQuantity"
            app:layout_constraintRight_toRightOf="@id/inpLayoutQuantity"
            app:layout_constraintTop_toBottomOf="@id/inpLayoutQuantity"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
