<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/cantarell_bold"
            android:text="LOGIN"
            android:textSize="48dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="158dp"
            android:layout_height="134dp"
            android:layout_marginTop="24dp"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/lblLogin"
            app:layout_constraintRight_toRightOf="@+id/lblLogin"
            app:layout_constraintTop_toBottomOf="@+id/lblLogin"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblUsername"
                android:textSize="16dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/inpLayoutUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cantarell_bold"
                android:hint="@string/lblPassword"
                android:textSize="16dp" />


        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lblBtnLogin"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inpLayoutPassword"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
